--- a/blue-green/single-service/rollout-v1.yaml
+++ b/blue-green/single-service/rollout-v1.yaml
@@ -43,15 +43,15 @@ spec:
   strategy:
     blueGreen:
       activeService: my-app
+      previewService: my-app-preview
+      autoPromotionEnabled: false
   selector:
     matchLabels:
       app: my-app
-      version: v1.0.0
   template:
     metadata:
       labels:
         app: my-app
-        version: v1.0.0
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9101"
