--- a/blue-green/single-service/rollout-v2.yaml
+++ b/blue-green/single-service/rollout-v2.yaml
@@ -11,16 +11,14 @@ spec:
     blueGreen:
       activeService: my-app
       previewService: my-app-preview
-      #autoPromotionEnabled: true
+      autoPromotionEnabled: false
   selector:
     matchLabels:
       app: my-app
-      version: v2.0.0
   template:
     metadata:
       labels:
         app: my-app
-        version: v2.0.0
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9101"
